; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/quantenna/qtnfmac/extr_qlink_util.c_qlink_chanwidth_nl_to_qlink.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/quantenna/qtnfmac/extr_qlink_util.c_qlink_chanwidth_nl_to_qlink.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@QLINK_CHAN_WIDTH_20_NOHT = common dso_local global i32 0, align 4
@QLINK_CHAN_WIDTH_20 = common dso_local global i32 0, align 4
@QLINK_CHAN_WIDTH_40 = common dso_local global i32 0, align 4
@QLINK_CHAN_WIDTH_80 = common dso_local global i32 0, align 4
@QLINK_CHAN_WIDTH_80P80 = common dso_local global i32 0, align 4
@QLINK_CHAN_WIDTH_160 = common dso_local global i32 0, align 4
@QLINK_CHAN_WIDTH_5 = common dso_local global i32 0, align 4
@QLINK_CHAN_WIDTH_10 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @qlink_chanwidth_nl_to_qlink to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @qlink_chanwidth_nl_to_qlink(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %21 [
    i32 132, label %5
    i32 133, label %7
    i32 131, label %9
    i32 129, label %11
    i32 128, label %13
    i32 134, label %15
    i32 130, label %17
    i32 135, label %19
  ]

5:                                                ; preds = %1
  %6 = load i32, i32* @QLINK_CHAN_WIDTH_20_NOHT, align 4
  store i32 %6, i32* %2, align 4
  br label %22

7:                                                ; preds = %1
  %8 = load i32, i32* @QLINK_CHAN_WIDTH_20, align 4
  store i32 %8, i32* %2, align 4
  br label %22

9:                                                ; preds = %1
  %10 = load i32, i32* @QLINK_CHAN_WIDTH_40, align 4
  store i32 %10, i32* %2, align 4
  br label %22

11:                                               ; preds = %1
  %12 = load i32, i32* @QLINK_CHAN_WIDTH_80, align 4
  store i32 %12, i32* %2, align 4
  br label %22

13:                                               ; preds = %1
  %14 = load i32, i32* @QLINK_CHAN_WIDTH_80P80, align 4
  store i32 %14, i32* %2, align 4
  br label %22

15:                                               ; preds = %1
  %16 = load i32, i32* @QLINK_CHAN_WIDTH_160, align 4
  store i32 %16, i32* %2, align 4
  br label %22

17:                                               ; preds = %1
  %18 = load i32, i32* @QLINK_CHAN_WIDTH_5, align 4
  store i32 %18, i32* %2, align 4
  br label %22

19:                                               ; preds = %1
  %20 = load i32, i32* @QLINK_CHAN_WIDTH_10, align 4
  store i32 %20, i32* %2, align 4
  br label %22

21:                                               ; preds = %1
  store i32 -1, i32* %2, align 4
  br label %22

22:                                               ; preds = %21, %19, %17, %15, %13, %11, %9, %7, %5
  %23 = load i32, i32* %2, align 4
  ret i32 %23
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
